# zitrone

./: .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  GEMINI.md  QWEN.md  README.md  RUN_LEDGER.md  SECURITY.md  docker-compose.continuity.yml  docker-compose.i2p.yml  docker-compose.tor.yml  docker-compose.yml  lemon-ui.jsx  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sublemonable-MASTER.json  tsconfig.base.json  zitrone-MASTER.json
.cursor/rules/: l00prite.mdc
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  link-check.yml  release-apk.yml
.grok/: GROK.md
.l00prite/: blueprint.md  constraints.md  failures.md  heartbeat.json  ledger.md  memory.md  state.json  todos.md
.windsurf/rules/: l00prite.md
Claude/: sublemonable-preview.html  sublemonable-v2-blueprint.json  zitrone-preview.html  zitrone-v2-blueprint.json
apps/android/: .gitignore  README.md  build.gradle.kts  gradle.properties  keystore.properties.example  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/gradle/: libs.versions.toml
apps/desktop/: .gitignore  README.md  package.json
apps/desktop/src-tauri/: CHANGELOG.md  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: i2p_ws_live_test.rs  ws_subproto_diag.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: i2p.rs  keystore.rs  lib.rs  main.rs  pinning.rs  screenshot.rs  tor.rs  transport.rs  window.rs
apps/ios/: README.md  project.yml
apps/ios/Configuration/: Release.xcconfig
apps/ios/NotificationService/: Info.plist  NotificationService.swift
apps/ios/Sources/: SublemonableApp.swift  ZitroneApp.swift
apps/ios/Support/: Info.plist
apps/web/: .env.example  index.html  package.json  tailwind.config.js  vite.config.ts
docs/: DEPLOYMENT.md  RELEASING_ANDROID.md  RELEASING_RELAY.md  SECURITY_MODEL.md  SELF_HOSTING.md  SETUP.md  TOR_ARCHITECTURE.md  V1_5_STATUS.md  V1_AUDIT.md  VAULT_ARCHITECTURE.md
docs/design/: watermark-tile-preview.html
i2p/: i2pd.conf  tunnels.conf
l00prite/: AGENTS.md  CLAUDE.md  README.md
l00prite/.l00prite/: LOCKING.md  README.md  blueprint.md  constraints.md  failures.md  heartbeat.json  ledger.md  lock.json  memory.md  state.json  todos.0.8.1.md  todos.md
onion-site/: SHA256SUMS  index.html  style.css
research/docs/: linux-resolve.md
scripts/: check-live-links.sh  release-android-on-box.sh  verify-relay-build.sh
server/: .env.example  Dockerfile  go.mod  go.sum  sqlc.yaml
tor/: Dockerfile  torrc
website/: DEPLOY.md  next.config.mjs  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vercel.json
(+377 files in other folders)
