# Sublemonable — Copyright (C) 2026 Sublemonable contributors
# Licensed under the GNU Affero General Public License v3.0 or later.
# See the LICENSE file in the repository root for full license text.
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "sublemonable-desktop"
version = "1.5.1"
edition = "2021"
description = "Sublemonable desktop app — Linux"
license = "AGPL-3.0-only"
authors = ["Sublemonable contributors"]
rust-version = "1.77.2"

# The library carries all logic so it can be reused across desktop and (future)
# mobile targets; main.rs is a thin entry point that calls run().
[lib]
name = "sublemonable_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# tauri-build generates the Tauri context (config, capabilities, icons) at
# compile time. It is part of the Tauri toolchain, not an extra runtime dep.
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
# libsecret (Secret Service) bindings for the primary keystore backend.
secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# XDG base dirs for the file-fallback keystore path.
dirs = "5"
# Zero secret bytes on drop.
zeroize = { version = "1", features = ["derive"] }

# ── Certificate-pinned transport (src/transport.rs) ──────────────────────────
# The WebView can't pin TLS, so REST + WebSocket traffic is routed through a
# native rustls client with a custom SPKI-pinning verifier. Versions are chosen
# to share a single rustls 0.23 graph across reqwest and tokio-tungstenite.
# `default-features = false` on rustls keeps the crypto backend on `ring`
# (no aws-lc-rs / C toolchain requirement). reqwest is already in the lockfile
# transitively without a TLS backend; declaring it here adds rustls + the
# `use_preconfigured_tls` entry point.
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
webpki-roots = "0.26"
x509-parser = "0.16"
futures-util = "0.3"
sha2 = "0.10"
base64 = "0.22"
url = "2"

[profile.release]
# Smaller, harder-to-reverse release binary; strip symbols.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
